--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nitnoise.net | Live on GitHub Pages</title>
+    <title>NITNOISE PAI</title>
     <style>
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -25,17 +25,19 @@
         h1 {
             font-size: 2.5rem;
             color: #1a1a1a;
+            text-transform: uppercase;
         }
         p {
             font-size: 1.1rem;
             color: #555;
+            text-transform: uppercase;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>nitnoise.net</h1>
-        <p>Hosted with GitHub Pages. Edited with Cursor.</p>
+        <h1>NITNOISE PAI</h1>
+        <p>COMING SOON.</p>
     </div>
 </body>
 </html>
