--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
             position: relative;
             width: 80vw;
             height: 80vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
         .scene img {
             position: absolute;
+            top: 50%;
+            left: 50%;
             max-width: 500px;
             width: 100%;
             height: auto;
             transition: transform 0.1s linear;
+            /* Center the image and prepare for JS transform */
+            transform: translate(-50%, -50%);
         }
         #graphic {
             width: 60%;
@@ -41,26 +42,28 @@
 </head>
 <body>
     <div class="scene">
-        <img src="FINAL 2_trans.png" id="graphic" alt="Nitnoise Graphic">
-        <img src="LOGO TEXT ONLY.png" id="text-logo" alt="Nitnoise Text Logo">
+        <img src="graphic.png" id="graphic" alt="Nitnoise Graphic">
+        <img src="logo-text.png" id="text-logo" alt="Nitnoise Text Logo">
     </div>
 
     <script>
         document.addEventListener('mousemove', (e) => {
-            const scene = document.querySelector('.scene');
             const graphic = document.getElementById('graphic');
             const textLogo = document.getElementById('text-logo');
 
             const { clientX, clientY } = e;
             const { innerWidth, innerHeight } = window;
 
-            // Calculate movement ratios
+            // Calculate movement ratios from -1 to 1
             const moveX = (clientX - innerWidth / 2) / (innerWidth / 2);
             const moveY = (clientY - innerHeight / 2) / (innerHeight / 2);
 
-            // Apply transformations. Graphic moves more for a depth effect.
-            graphic.style.transform = `translateX(${moveX * -20}px) translateY(${moveY * -20}px)`;
-            textLogo.style.transform = `translateX(${moveX * 10}px) translateY(${moveY * 10}px)`;
+            // Combine centering transform with parallax transform
+            const graphicTransform = `translate(-50%, -50%) translateX(${moveX * -20}px) translateY(${moveY * -20}px)`;
+            const textLogoTransform = `translate(-50%, -50%) translateX(${moveX * 10}px) translateY(${moveY * 10}px)`;
+
+            graphic.style.transform = graphicTransform;
+            textLogo.style.transform = textLogoTransform;
         });
     </script>
 </body>
